package Entidades;

public class Administrador {

    private Proveedores proveedores;

    public void Administrador() {

    }

    public void mantenimientoYControl() {



    }

    public void compra() {



    }

    public void pedido() {



    }
    
}
