package Entidades;

public class Almacen {

    private String nombreEmpresa, direccion;

    public void Almacen() {

    }

    public Almacen(String nombreEmpresa, String direccion) {
        this.nombreEmpresa = nombreEmpresa;
        this.direccion = direccion;
    }


    public void recibirPedido() {



    }

    public void registroPedido() {



    }

}
