package Entidades;

public class Control {

    String producto;

    public Control(String producto) {
        this.producto = producto;
    }

    public Control() {
    }

    public String getProducto() {
        return producto;
    }

    public void setProducto(String producto) {
        this.producto = producto;
    }

    public void mantenimientoYControl(){

    }

    public void actualizacion(){

    }

    public void depuracion(){

    }

}
