package Entidades

public class Venta{

private Producto producto;
private Precio precio;
private Cantidad cantidad;

public void Venta(){

}

public void registroVenta(){

}
}
