@startuml latercera
skinparam  Style strictuml
skinparam  SequenceMessageAlignment center

class Ventas{
    - producto: Producto
    - precio: double
    - cantidad: int
    +ventas()
    +registroVentas()
}

class Almacen{
    - nombreEmpresa: string
    - direccion: string
    +ventas()
    +recibirPedido()
    +recibirPago()
}

class Pedido{
    - producto: Producto
    - cantidad: int
    - numeroDeSolicitud: int
    +recibirPedido()
    +registroPedido()
}

class Existencias{
    -producto: Producto
    -precio: double
    -cantidad: int
    +registroDeVentas()
    +existencias()
}

class Producto{
    -idProducto: int
    -nombre: string
    -precio: double
    -proveedor: Proveedor
    +asignacion()
    +retorno()
}

class Inventario{
    -numeroDeSolicitud: int
    +registroPedido()
    +existencias()
}

class Proveedor{
    -telefono: int
    -NIT: int
    -direccion: string
    -cantidad: int
    -producto: Producto
    -nombreProveedor: string
    +ventaDirecta()
    +pedidosEspeciales()
}

class Administrador{
    -proveedores: Proveedor
    +mantemientoControl()
    +compra()
    +pedido()
}

class Control{
    -producto: Producto
    +mantemientoControl()
    +actualizacion()
    +depuracion()
}

Almacen-->Ventas: hace?
Almacen-->Pedido: toma?
Existencias-->Almacen
Existencias-->Producto
Inventario-->Pedido
Inventario-->Producto
Existencias-->Inventario
Proveedor-->Administrador: ManyToOne
Inventario-->Administrador
Administrador-->Control
@enduml